when using display block for an image, the image fits correctly with the border, but with inline, there is a little gap at the bottom of the image

--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ body {
     box-sizing: border-box;
 }
 
-img {
+/* img {
     display: block;
-}
+} */
 
 .example {
     margin-top: 1rem;
